merged my work with that of Dario, fixed some PMD problems in the model